Fix spacing

--- a/app/components-react/modals/onboarding/Ultra.m.less
+++ b/app/components-react/modals/onboarding/Ultra.m.less
@@ -15,6 +15,7 @@
 .ultra-box-container {
   background: transparent !important;
   padding: 16px !important;
+  width: 100%;
 }
 
 .free-box {
